[gd_scene load_steps=3 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]

[node name="main" type="Node"]

script/script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]

[node name="gem_container" type="Node" parent="."]

[node name="HUD" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="score" type="Label" parent="HUD"]

rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 39.0
margin/top = 25.0
margin/right = 79.0
margin/bottom = 39.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="time" type="Label" parent="HUD"]

rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 636.0
margin/top = 27.0
margin/right = 676.0
margin/bottom = 41.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="game_over" type="Label" parent="HUD"]

visibility/opacity = 0.0
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 8, 8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 896.0
margin/bottom = 525.0
text = "GAME OVER"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="game_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = true

[connection signal="timeout" from="game_timer" to="." method="_on_game_timer_timeout"]


